Fix installation instructions in README.md and update test notebook to handle mapping output correctly

--- a/src/py2rdf/testRDFModel.ipynb
+++ b/src/py2rdf/testRDFModel.ipynb
@@ -752,19 +752,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "get_mapping",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPerson mapping:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mPerson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_mapping\u001b[49m())\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStudent mapping:\u001b[39m\u001b[38;5;124m\"\u001b[39m, Student\u001b[38;5;241m.\u001b[39mget_mapping())\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnotherSubclassOfStudent mapping:\u001b[39m\u001b[38;5;124m\"\u001b[39m, AnotherSubclassOfStudent\u001b[38;5;241m.\u001b[39mget_mapping())\n",
-      "File \u001b[0;32m/opt/homebrew/anaconda3/envs/sindit20/lib/python3.12/site-packages/pydantic/_internal/_model_construction.py:262\u001b[0m, in \u001b[0;36mModelMetaclass.__getattr__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    260\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m private_attributes \u001b[38;5;129;01mand\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m private_attributes:\n\u001b[1;32m    261\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m private_attributes[item]\n\u001b[0;32m--> 262\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(item)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: get_mapping"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'label': rdflib.term.URIRef('http://www.w3.org/2000/01/rdf-schema#label')}\n",
+      "Student mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID')}\n",
+      "AnotherSubclassOfStudent mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID'), 'another_property': rdflib.term.URIRef('http://example.org/hasAnotherProperty')}\n"
      ]
     }
    ],
