Update README.md and test notebook for improved clarity and functionality

--- a/testRDFModel.ipynb
+++ b/testRDFModel.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rdf_model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m__future__\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m annotations  \u001b[38;5;66;03m# Makes all type hints lazy\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ClassVar, List, Union\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrdf_model\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RDFModel, URIRefNode\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrdf_model\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MapTo\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrdflib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal, Namespace, URIRef, Graph\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'rdf_model'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import annotations  # Makes all type hints lazy\n",
     "from typing import ClassVar, List, Union\n",
@@ -35,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +103,7 @@
     }
    ],
    "source": [
-    "from rdf_model import NodeURIMeta\n",
+    "from py2rdf.rdf_model import NodeURIMeta\n",
     "\n",
     "\n",
     "NodeURIClassMapping = NodeURIMeta.node_uri_class_map\n",
@@ -124,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID')}\n"
+      "{'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <py2rdf.rdf_model.MapTo object at 0x10fd737a0>, 'children': <py2rdf.rdf_model.MapTo object at 0x10fd71940>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID')}\n"
      ]
     }
    ],
@@ -141,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID'), 'another_property': rdflib.term.URIRef('http://example.org/hasAnotherProperty')}\n"
+      "{'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <py2rdf.rdf_model.MapTo object at 0x10fd737a0>, 'children': <py2rdf.rdf_model.MapTo object at 0x10fd71940>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID'), 'another_property': rdflib.term.URIRef('http://example.org/hasAnotherProperty')}\n"
      ]
     }
    ],
@@ -165,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -764,16 +752,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Person mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'label': rdflib.term.URIRef('http://www.w3.org/2000/01/rdf-schema#label')}\n",
-      "Student mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID')}\n",
-      "AnotherSubclassOfStudent mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <rdf_model.MapTo object at 0x10831c140>, 'children': <rdf_model.MapTo object at 0x10ec4dca0>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID'), 'another_property': rdflib.term.URIRef('http://example.org/hasAnotherProperty')}\n"
+      "Person mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <py2rdf.rdf_model.MapTo object at 0x10fd737a0>, 'children': <py2rdf.rdf_model.MapTo object at 0x10fd71940>, 'label': rdflib.term.URIRef('http://www.w3.org/2000/01/rdf-schema#label')}\n",
+      "Student mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <py2rdf.rdf_model.MapTo object at 0x10fd737a0>, 'children': <py2rdf.rdf_model.MapTo object at 0x10fd71940>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID')}\n",
+      "AnotherSubclassOfStudent mapping: {'name': rdflib.term.URIRef('http://example.org/hasName'), 'age': rdflib.term.URIRef('http://example.org/hasAge'), 'partner': <py2rdf.rdf_model.MapTo object at 0x10fd737a0>, 'children': <py2rdf.rdf_model.MapTo object at 0x10fd71940>, 'student_id': rdflib.term.URIRef('http://example.org/hasStudentID'), 'another_property': rdflib.term.URIRef('http://example.org/hasAnotherProperty')}\n"
      ]
     }
    ],
